--- a/project.properties
+++ b/project.properties
@@ -3,3 +3,4 @@ maven.xdoclet.webdoclet.0=true
 maven.xdoclet.webdoclet.deploymentdescriptor.0.destDir=${maven.war.webapp.dir}/WEB-INF
 maven.xdoclet.webdoclet.deploymentdescriptor.0.mergeDir=${maven.src.dir}/merge
 maven.xdoclet.webdoclet.deploymentdescriptor.0.displayname=${pom.name}
+maven.war.webxml=${maven.war.webapp.dir}/WEB-INF/web.xml
