--- a/src/webapp/WEB-INF/web.xml
+++ b/src/webapp/WEB-INF/web.xml
@@ -12,4 +12,8 @@
 		<servlet-name>HelloWorld</servlet-name>
 		<url-pattern>/HelloWorld</url-pattern>
 	</servlet-mapping>
+	
+	 <welcome-file-list>
+	 	<welcome-file>index.html</welcome-file>
+	 </welcome-file-list>
 </web-app>
