--- a/pom.xml
+++ b/pom.xml
@@ -5,5 +5,10 @@
   <version>2.0</version>
   <packaging>war</packaging>
   <dependencies>
+    <dependency>
+      <groupId>org.apache.geronimo.specs</groupId>
+      <artifactId>geronimo-j2ee_1.4_spec</artifactId>
+      <version>1.1</version>
+    </dependency>
   </dependencies>
 </project>
