--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,10 @@
   <groupId>net.trajano</groupId>
   <artifactId>util</artifactId>
   <version>2.0</version>
+  <shortDescription>A set of utility JSPs.</shortDescription>
+    <description>This provides a set of utility JSPs that can be used in debugging JNDI, JMS, JDBC and EJBs.  These JSPs
+  are standalone and do not require any dependencies aside from being in a J2EE container.  The JSPs can also be extracted 
+and put into other projects that might have resources that are in the java: tree.  This project also serves as a sample web application that is integration tested with Cactus.</description>
   <packaging>war</packaging>
   <dependencies>
     <dependency>
