--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,11 @@ and put into other projects that might have resources that are in the java: tree
 			<version>7.0</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>bootstrap</artifactId>
+			<version>3.0.2</version>
+		</dependency>
 	</dependencies>
 	<licenses>
 		<license>
@@ -31,6 +36,16 @@ and put into other projects that might have resources that are in the java: tree
 	</licenses>
 	<build>
 		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
+				<configuration>
+					<!-- http://maven.apache.org/plugins/maven-compiler-plugin/ -->
+					<source>1.7</source>
+					<target>1.7</target>
+				</configuration>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
