Cleaned up pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -1,16 +1,16 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>net.trajano.util</groupId>
-	<artifactId>util</artifactId>
-	<name>Utility Web Application</name>
-	<version>3.0.0-SNAPSHOT</version>
 	<parent>
 		<groupId>net.trajano</groupId>
 		<artifactId>trajano</artifactId>
 		<version>5</version>
 	</parent>
-
+	<groupId>net.trajano.util</groupId>
+	<artifactId>util</artifactId>
+	<name>Utility Web Application</name>
+	<version>3.0.0-SNAPSHOT</version>
 	<description>This provides a set of utility JSPs that can be used in debugging JNDI, JMS, JDBC and EJBs.</description>
 	<packaging>war</packaging>
 	<dependencies>
@@ -39,10 +39,24 @@
 				</configuration>
 			</plugin>
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>2.6</version>
+			</plugin>
+			<plugin>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.16</version>
+			</plugin>
+			<plugin>
 				<artifactId>maven-war-plugin</artifactId>
 				<version>2.4</version>
 			</plugin>
 		</plugins>
 	</build>
+	<scm>
+		<connection>scm:git:https://github.com/trajano/${project.artifactId}</connection>
+		<developerConnection>scm:git:ssh://git@github.com/trajano/${project.artifactId}.git</developerConnection>
+		<tag>HEAD</tag>
+	</scm>
+	<inceptionYear>2006</inceptionYear>
 </project>
+
