--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,13 @@
             <url>github:http://site.trajano.net/${project.artifactId}/</url>
         </site>
     </distributionManagement>
+    <properties>
+        <m2e.jaxrs.activation>false</m2e.jaxrs.activation>
+        <m2e.jpa.activation>false</m2e.jpa.activation>
+        <m2e.jsf.activation>false</m2e.jsf.activation>
+        <m2e.wtp.activation>true</m2e.wtp.activation>
+        <project.build.sourceEncoding>utf8</project.build.sourceEncoding>
+    </properties>
     <dependencies>
         <dependency>
             <groupId>javaee</groupId>
@@ -65,5 +72,77 @@
                 <version>2.5</version>
             </plugin>
         </plugins>
+        <extensions>
+            <extension>
+                <groupId>net.trajano</groupId>
+                <artifactId>coding-standards</artifactId>
+                <version>1.1.3-SNAPSHOT</version>
+            </extension>
+        </extensions>
     </build>
+    <profiles>
+        <profile>
+            <id>m2e</id>
+            <activation>
+                <property>
+                    <name>m2e.version</name>
+                </property>
+            </activation>
+            <build>
+                <pluginManagement>
+                    <plugins>
+                        <plugin>
+                            <groupId>org.eclipse.m2e</groupId>
+                            <artifactId>lifecycle-mapping</artifactId>
+                            <version>1.0.0</version>
+                            <configuration>
+                                <lifecycleMappingMetadata>
+                                    <pluginExecutions>
+                                        <pluginExecution>
+                                            <pluginExecutionFilter>
+                                                <groupId>org.apache.maven.plugins</groupId>
+                                                <artifactId>maven-plugin-plugin</artifactId>
+                                                <versionRange>[3.2,)</versionRange>
+                                                <goals>
+                                                    <goal>descriptor</goal>
+                                                    <goal>helpmojo</goal>
+                                                </goals>
+                                            </pluginExecutionFilter>
+                                            <action>
+                                                <ignore/>
+                                            </action>
+                                        </pluginExecution>
+                                    </pluginExecutions>
+                                </lifecycleMappingMetadata>
+                            </configuration>
+                        </plugin>
+                    </plugins>
+                </pluginManagement>
+                <plugins>
+                    <plugin>
+                        <groupId>net.trajano.mojo</groupId>
+                        <artifactId>m2e-codestyle-maven-plugin</artifactId>
+                        <version>1.1.0</version>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>configure</goal>
+                                </goals>
+                                <configuration>
+                                    <codeStyleBaseUrl>codestyle</codeStyleBaseUrl>
+                                </configuration>
+                            </execution>
+                        </executions>
+                        <dependencies>
+                            <dependency>
+                                <groupId>net.trajano</groupId>
+                                <artifactId>coding-standards</artifactId>
+                                <version>1.1.3-SNAPSHOT</version>
+                            </dependency>
+                        </dependencies>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
