--- a/pom.xml
+++ b/pom.xml
@@ -1,148 +1,156 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>net.trajano</groupId>
-        <artifactId>trajano</artifactId>
-        <version>10</version>
-    </parent>
-    <groupId>net.trajano.util</groupId>
-    <artifactId>util</artifactId>
-    <version>3.0.1-SNAPSHOT</version>
-    <packaging>war</packaging>
-    <name>Utility Web Application</name>
-    <description>This provides a set of utility JSPs that can be used in debugging JNDI, JMS, JDBC and EJBs.</description>
-    <url>http://site.trajano.net/util/</url>
-    <inceptionYear>2006</inceptionYear>
-    <licenses>
-        <license>
-            <name>Eclipse Public License 1.0</name>
-            <url>http://www.spdx.org/licenses/EPL-1.0</url>
-        </license>
-    </licenses>
-    <scm>
-        <connection>scm:git:https://github.com/trajano/${project.artifactId}</connection>
-        <developerConnection>scm:git:ssh://git@github.com/trajano/${project.artifactId}.git</developerConnection>
-        <tag>HEAD</tag>
-        <url>http://github.com/trajano/${project.artifactId}</url>
-    </scm>
-    <distributionManagement>
-        <site>
-            <id>gh-pages</id>
-            <name>Trajano Github Pages</name>
-            <url>github:http://site.trajano.net/${project.artifactId}/</url>
-        </site>
-    </distributionManagement>
-    <properties>
-        <m2e.jaxrs.activation>false</m2e.jaxrs.activation>
-        <m2e.jpa.activation>false</m2e.jpa.activation>
-        <m2e.jsf.activation>false</m2e.jsf.activation>
-        <m2e.wtp.activation>true</m2e.wtp.activation>
-        <project.build.sourceEncoding>utf8</project.build.sourceEncoding>
-    </properties>
-    <dependencies>
-        <dependency>
-            <groupId>javaee</groupId>
-            <artifactId>javaee-api</artifactId>
-            <version>5</version>
-            <scope>provided</scope>
-        </dependency>
-    </dependencies>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.2</version>
-                <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
-                </configuration>
-            </plugin>
-            <plugin>
-                <artifactId>maven-resources-plugin</artifactId>
-                <version>2.7</version>
-            </plugin>
-            <plugin>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.17</version>
-            </plugin>
-            <plugin>
-                <artifactId>maven-war-plugin</artifactId>
-                <version>2.5</version>
-            </plugin>
-        </plugins>
-        <extensions>
-            <extension>
-                <groupId>net.trajano</groupId>
-                <artifactId>coding-standards</artifactId>
-                <version>1.1.3-SNAPSHOT</version>
-            </extension>
-        </extensions>
-    </build>
-    <profiles>
-        <profile>
-            <id>m2e</id>
-            <activation>
-                <property>
-                    <name>m2e.version</name>
-                </property>
-            </activation>
-            <build>
-                <pluginManagement>
-                    <plugins>
-                        <plugin>
-                            <groupId>org.eclipse.m2e</groupId>
-                            <artifactId>lifecycle-mapping</artifactId>
-                            <version>1.0.0</version>
-                            <configuration>
-                                <lifecycleMappingMetadata>
-                                    <pluginExecutions>
-                                        <pluginExecution>
-                                            <pluginExecutionFilter>
-                                                <groupId>org.apache.maven.plugins</groupId>
-                                                <artifactId>maven-plugin-plugin</artifactId>
-                                                <versionRange>[3.2,)</versionRange>
-                                                <goals>
-                                                    <goal>descriptor</goal>
-                                                    <goal>helpmojo</goal>
-                                                </goals>
-                                            </pluginExecutionFilter>
-                                            <action>
-                                                <ignore/>
-                                            </action>
-                                        </pluginExecution>
-                                    </pluginExecutions>
-                                </lifecycleMappingMetadata>
-                            </configuration>
-                        </plugin>
-                    </plugins>
-                </pluginManagement>
-                <plugins>
-                    <plugin>
-                        <groupId>net.trajano.mojo</groupId>
-                        <artifactId>m2e-codestyle-maven-plugin</artifactId>
-                        <version>1.1.0</version>
-                        <executions>
-                            <execution>
-                                <goals>
-                                    <goal>configure</goal>
-                                </goals>
-                                <configuration>
-                                    <codeStyleBaseUrl>codestyle</codeStyleBaseUrl>
-                                </configuration>
-                            </execution>
-                        </executions>
-                        <dependencies>
-                            <dependency>
-                                <groupId>net.trajano</groupId>
-                                <artifactId>coding-standards</artifactId>
-                                <version>1.1.3-SNAPSHOT</version>
-                            </dependency>
-                        </dependencies>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>net.trajano</groupId>
+		<artifactId>trajano</artifactId>
+		<version>11.1</version>
+	</parent>
+	<groupId>net.trajano.util</groupId>
+	<artifactId>util</artifactId>
+	<version>3.1.0-SNAPSHOT</version>
+	<packaging>war</packaging>
+	<name>Utility Web Application</name>
+	<description>This provides a set of utility JSPs that can be used in debugging JNDI, JMS, JDBC and EJBs.</description>
+	<url>http://site.trajano.net/util/</url>
+	<inceptionYear>2006</inceptionYear>
+	<licenses>
+		<license>
+			<name>Eclipse Public License 1.0</name>
+			<url>http://www.spdx.org/licenses/EPL-1.0</url>
+		</license>
+	</licenses>
+	<scm>
+		<connection>scm:git:https://github.com/trajano/${project.artifactId}</connection>
+		<developerConnection>scm:git:ssh://git@github.com/trajano/${project.artifactId}.git</developerConnection>
+		<tag>HEAD</tag>
+		<url>http://github.com/trajano/${project.artifactId}</url>
+	</scm>
+	<distributionManagement>
+		<site>
+			<id>gh-pages</id>
+			<name>Trajano Github Pages</name>
+			<url>github:http://site.trajano.net/${project.artifactId}/</url>
+		</site>
+	</distributionManagement>
+	<properties>
+		<m2eclipse.wtp.contextRoot>/util</m2eclipse.wtp.contextRoot>
+		<m2e.jaxrs.activation>false</m2e.jaxrs.activation>
+		<m2e.jpa.activation>false</m2e.jpa.activation>
+		<m2e.jsf.activation>false</m2e.jsf.activation>
+		<m2e.wtp.activation>true</m2e.wtp.activation>
+		<project.build.sourceEncoding>utf8</project.build.sourceEncoding>
+	</properties>
+	<dependencies>
+		<dependency>
+			<groupId>org.glassfish.main.extras</groupId>
+			<artifactId>glassfish-embedded-all</artifactId>
+			<version>3.1.2.2</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>javax</groupId>
+			<artifactId>javaee-api</artifactId>
+			<version>6.0</version>
+			<scope>provided</scope>
+		</dependency>
+	</dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.2</version>
+				<configuration>
+					<source>1.6</source>
+					<target>1.6</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>2.7</version>
+			</plugin>
+			<plugin>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.17</version>
+			</plugin>
+			<plugin>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>2.5</version>
+			</plugin>
+		</plugins>
+		<extensions>
+			<extension>
+				<groupId>net.trajano</groupId>
+				<artifactId>coding-standards</artifactId>
+				<version>2.0.0</version>
+			</extension>
+		</extensions>
+	</build>
+	<profiles>
+		<profile>
+			<id>m2e</id>
+			<activation>
+				<property>
+					<name>m2e.version</name>
+				</property>
+			</activation>
+			<build>
+				<pluginManagement>
+					<plugins>
+						<plugin>
+							<groupId>org.eclipse.m2e</groupId>
+							<artifactId>lifecycle-mapping</artifactId>
+							<version>1.0.0</version>
+							<configuration>
+								<lifecycleMappingMetadata>
+									<pluginExecutions>
+										<pluginExecution>
+											<pluginExecutionFilter>
+												<groupId>org.apache.maven.plugins</groupId>
+												<artifactId>maven-plugin-plugin</artifactId>
+												<versionRange>[3.2,)</versionRange>
+												<goals>
+													<goal>descriptor</goal>
+													<goal>helpmojo</goal>
+												</goals>
+											</pluginExecutionFilter>
+											<action>
+												<ignore />
+											</action>
+										</pluginExecution>
+									</pluginExecutions>
+								</lifecycleMappingMetadata>
+							</configuration>
+						</plugin>
+					</plugins>
+				</pluginManagement>
+				<plugins>
+					<plugin>
+						<groupId>net.trajano.mojo</groupId>
+						<artifactId>m2e-codestyle-maven-plugin</artifactId>
+						<version>1.1.0</version>
+						<executions>
+							<execution>
+								<goals>
+									<goal>configure</goal>
+								</goals>
+								<configuration>
+									<codeStyleBaseUrl>codestyle</codeStyleBaseUrl>
+								</configuration>
+							</execution>
+						</executions>
+						<dependencies>
+							<dependency>
+								<groupId>net.trajano</groupId>
+								<artifactId>coding-standards</artifactId>
+								<version>2.0.0</version>
+							</dependency>
+						</dependencies>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 </project>
